[package]
name = "lunatic-buffer-api"
version = "0.12.0"
edition = "2021"
description = "Lunatic host functions for message sending."
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-messaging-api"
license = "Apache-2.0/MIT"

[dependencies]

anyhow = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["time"] }
wasmtime = { workspace = true }

hash-map-id = { workspace = true }
lunatic-common-api = { workspace = true }
lunatic-process = { workspace = true }
